============================== Next release ==============================


  new data (thanks to Andreas Vinnberg for suggestion!)
    main/SF6/Vukovic.yml
  new data (thanks to Juan I. Larruquert for providing numerical data!)
    main/CeF3/Rodriguez-de Marcos.yml
    main/LaF3/Rodriguez-de Marcos.yml
    main/MgF2/Rodriguez-de Marcos.yml
    main/SiO2/Rodriguez-de Marcos.yml
    main/Ta2O5/Rodriguez-de Marcos.yml
  new data (thanks to Valkai Sándor!)
    other/resists/Microchem SU-8 2000.yml
    other/resists/Microchem SU-8 3000.yml
  new data (thanks to Alessio Bucciarelli, University of Trento, Italy!)
    other/silk/Bombyx mori/Bucciarelli-FPP_FA_Ex.yml
    other/silk/Bombyx mori/Bucciarelli-FPP_FA_Unex.yml
    other/silk/Bombyx mori/Bucciarelli-rSF_FA.yml
    other/silk/Bombyx mori/Bucciarelli-rSF_H2O.yml
    other/silk/Bombyx mori/Bucciarelli-SPP_FA_Ex.yml
    other/silk/Bombyx mori/Bucciarelli-SPP_FA_Unex.yml
    other/silk/Bombyx mori/Bucciarelli-SN_FA.yml
  new data
    main/He/Smith.yml
    main/H2/Smith.yml
    main/O2/Smith.yml
    main/CO1/Smith.yml
    main/Kr/Smith.yml
    main/Na/Smith.yml
    main/K/Smith.yml
    main/Mo/Kirillova.yml
    main/Cs/Ives.yml
    main/Rb/Ives.yml
    main/K/Ives.yml
    main/Na/Ives.yml
    main/K/Sutherland.yml
    main/Cs/Whang.yml
    main/Rb/Whang.yml
    main/Li/Callcott.yml
    main/Na/Althoff.yml
    main/K/Althoff.yml
    main/Cs/Monin.yml
    main/Rb/Monin.yml
    main/Na/Monin.yml
    main/K/Monin.yml
  updated data
    all data co-authored by J. I. Larruquert: add deposition temperature and specs
    main/Al/Larruquert.yml: references
    main/Na/Inagaki.yml: references, specs
    main/Li/Inagaki.yml: references, specs


============================== 2018-02-10 ==============================

  !!! update of database structure !!! 
    added "info" - optional additional information that can be associated with shelves, books and pages
    informatin is stored in .html files located in the '/info' folder