@@ -1,0 +1,12 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "M. P. Fischer, J. Bühler, G. Fitzky, T. Kurihara, S. Eggert, A. Leitenstorfer, D. Brida. Phase-matched generation of coherent field transients below 15 THz in 4H-SiC, <a href=\"https://doi.org/10.1364/OL.42.002687\"><i>Opt. Lett.</i> <b>42</b>, 2687-2690 (2017)</a>"
+COMMENTS: "4H-SiC (hexagonal crystal structure); Ordinary ray (o); Room temperature."
+DATA:
+  - type: formula 2
+    range: 17 150
+    coefficients: 6.055 2.669 167.8
+SPECS:
+    temperature: 20 °C
