@@ -6,9 +6,16 @@ copyright and related rights waived via CC0 1.0
 
 <h1>Silicon carbide, SiC</h1>
 
+<h2>Alternative names of some polymorphs</h2>
+<ul>
+<li>6H-SiC: α-SiC</li>
+<li>3C-SiC: β-SiC</li>
+</ul>
+
 <h2>External links</h2>
 <ul>
 <li><a href="https://en.wikipedia.org/wiki/Silicon_carbide">Silicon carbide - Wikipedia</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Polymorphs_of_silicon_carbide">Polymorphs of silicon carbide - Wikipedia</a></li>
 <li><a href="https://www.webelements.com/compounds/silicon/silicon_carbide.html">Silicon carbide - WebElements</a></li>
 <li><a href="http://www.ioffe.ru/SVA/NSM/Semicond/SiC">Silicon carbide - NSM Archive</a></li>
 </ul>
