@@ -1,6 +1,8 @@
 ============================== Next release ==============================
 
-
+  new data (thanks to Johannes Bühler and Marco Fischer, University of Konstanz, Germany, for providing numerical data in YAML format!)
+    main/SiC/Fischer-o.yml
+    main/SiC/Fischer-e.yml
   new data (thanks to Andreas Vinnberg for suggestion!)
     main/SF6/Vukovic.yml
   new data (thanks to Juan I. Larruquert for providing numerical data!)
